[gd_scene load_steps=4 format=3 uid="uid://dmo4io40scf8m"]

[ext_resource type="Script" uid="uid://clcaiggwvvg2f" path="res://menu_songs.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cwqio8uyxvr6d" path="res://gfx/stars.png" id="2_mqn5i"]

[sub_resource type="Theme" id="Theme_mqn5i"]

[node name="Node2D" type="Panel"]
custom_minimum_size = Vector2(376, 32)
offset_right = 376.0
offset_bottom = 32.0
theme = SubResource("Theme_mqn5i")
script = ExtResource("1")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_right = 310.0
offset_bottom = 24.0
scale = Vector2(0.8, 0.8)
text = "ASDASDASD"
clip_text = true

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 20.0
offset_right = 248.0
offset_bottom = 44.0
scale = Vector2(0.4, 0.4)
text = "asdasads"
clip_text = true

[node name="Label6" type="Label" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 20.0
offset_right = 496.0
offset_bottom = 44.0
scale = Vector2(0.4, 0.4)
text = "No song found!"
clip_text = true

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 312.0
offset_right = 352.0
offset_bottom = 23.0
scale = Vector2(0.8, 0.8)
text = "22:36"

[node name="Label7" type="Label" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = 2.0
offset_right = 403.0
offset_bottom = 25.0
scale = Vector2(0.3, 0.3)
text = "500"
horizontal_alignment = 2

[node name="Label9" type="Label" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = 10.0
offset_right = 403.0
offset_bottom = 33.0
scale = Vector2(0.3, 0.3)
text = "600"
horizontal_alignment = 2

[node name="Label10" type="Label" parent="."]
layout_mode = 0
offset_left = 358.0
offset_top = 4.0
offset_right = 399.0
offset_bottom = 27.0
scale = Vector2(0.4, 0.4)
text = "99%"
horizontal_alignment = 2

[node name="Label8" type="Label" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = 24.0
offset_right = 403.0
offset_bottom = 47.0
scale = Vector2(0.3, 0.3)
text = "2"
horizontal_alignment = 2

[node name="Label5" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 314.0
offset_top = 44.0
offset_right = 356.0
offset_bottom = 67.0
scale = Vector2(0.8, 0.8)
text = "4.5 â˜†"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 256.0
offset_right = 304.0
offset_bottom = 23.0
scale = Vector2(0.8, 0.8)
text = "99.19%"

[node name="stars" type="Node2D" parent="."]
position = Vector2(316, 24)
scale = Vector2(0.07, 0.07)

[node name="1" type="Sprite2D" parent="stars"]
texture = ExtResource("2_mqn5i")
hframes = 3

[node name="2" type="Sprite2D" parent="stars"]
position = Vector2(150, 0)
texture = ExtResource("2_mqn5i")
hframes = 3

[node name="3" type="Sprite2D" parent="stars"]
position = Vector2(300, 0)
texture = ExtResource("2_mqn5i")
hframes = 3

[node name="4" type="Sprite2D" parent="stars"]
position = Vector2(450, 0)
texture = ExtResource("2_mqn5i")
hframes = 3

[node name="5" type="Sprite2D" parent="stars"]
position = Vector2(600, 0)
texture = ExtResource("2_mqn5i")
hframes = 3
